<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.toastkid.yobidashi.ScrollingActivity"
    >
    <item
        android:id="@+id/menu_view_history"
        android:orderInCategory="100"
        android:title="@string/view_history"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_about_app"
        android:orderInCategory="100"
        android:title="@string/about_app"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"
        />
</menu>