<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbar_height"
            />

        <TextView
            android:id="@+id/licenses"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:paddingLeft="@dimen/setting_item_left_margin"
            android:paddingStart="@dimen/setting_item_left_margin"
            android:drawableLeft="@drawable/ic_license"
            android:drawableStart="@drawable/ic_license"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/title_licenses"
            android:textSize="16sp"
            android:background="@drawable/ripple"
            tools:ignore="RtlSymmetry"
            />

        <include layout="@layout/common_divider_left_margin"/>

        <TextView
            android:id="@+id/settings_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:drawableLeft="@drawable/ic_privacy"
            android:drawableStart="@drawable/ic_privacy"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/setting_item_left_margin"
            android:paddingStart="@dimen/setting_item_left_margin"
            android:text="@string/title_privacy_policy"
            android:textSize="16sp"
            android:background="@drawable/ripple"
            tools:ignore="RtlSymmetry"
            />

        <include layout="@layout/common_divider_left_margin"/>

        <FrameLayout
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/ripple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_item_left_margin"
                android:layout_marginStart="@dimen/setting_item_left_margin"
                android:drawableLeft="@drawable/ic_android"
                android:drawableStart="@drawable/ic_android"
                android:drawablePadding="8dp"
                android:layout_gravity="center_vertical|left"
                android:text="@string/title_app_version"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded"
                />
            <TextView
                android:id="@+id/settings_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/setting_item_left_margin"
                android:layout_gravity="center_vertical|right"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded"
                />
        </FrameLayout>

        <include layout="@layout/common_divider"/>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/copyright"
            />

        <include layout="@layout/common_divider"/>
    </LinearLayout>
</ScrollView>